# socialkube

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  docker-compose.yaml  skills-lock.json
.gemini/skills/app-runner/: SKILL.md
.gemini/skills/nextjs-developer/: SKILL.md
.gemini/skills/rust-engineer/: SKILL.md
docs/: prd.md
src/: config.rs  error.rs  main.rs
src/api/: routes.rs
src/economy/: ledger.rs
src/engine/: backend.rs  benchmark.rs  downloader.rs  memory.rs  mod.rs  sharder.rs  types.rs
src/p2p/: behaviour.rs  host.rs  mod.rs
web/: Dockerfile  package-lock.json  package.json
web/src/app/: page.tsx
