[package]
name = "socialkube"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# P2P Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "tokio", "mdns", "macros"] }

# API & Web
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AI & Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.30"
# candle-core = "0.3" # Uncomment if using Rust-native ML

[dev-dependencies]
anyhow = "1.0"
