[package]
name = "socialkube"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# P2P Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "tokio", "mdns", "macros", "request-response", "json"] }

# API & Web
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# AI & Database
sysinfo = "0.30"
duckdb = { version = "1.10500.0", features = ["bundled", "r2d2"] }
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.19"
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
thiserror = "2.0.18"
anyhow = "1.0"
tower = { version = "0.5.3", features = ["util"] }
# candle-flash-attn = { version = "0.8", optional = true }
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
anyhow = "1.0"
